--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -12,10 +12,11 @@ danger = #ff5849
 warning = #ff9039
 default = #ddd
 dark = #777
+optional = #f387c7
 
 /* variables */
 breadcrumbClr = #e9ecef
-shoppingCart = dark
+shoppingCart = white
 qtyCartClr = warning
 wSlider = 100% //width slidet home
 hSlider = 400px //slider for home height
@@ -26,10 +27,10 @@ wShopCart = 100% //shopcart image size width
 
 /* font style */
 font-size = 16px
-fontClr = #777
+fontClr = black
 
 /* color sections */
-mainColor = danger //color of nav
+mainColor = black //color of nav
 footerTopClr = #ccc
 footerClr = #999
 linkClr = #999
