--- a/app/css/core/components.styl
+++ b/app/css/core/components.styl
@@ -293,6 +293,48 @@
       right 35px
       position absolute
       padding 5px 20px
+.slider-small
+  margin-top 30px
+  margin-bottom 30px
+
+/* WIDTH 100% CAROUSEL HOME */
+.owl-theme-slider
+  .owl-dots
+    position absolute
+    bottom 15px
+    left 0
+    right 0
+    .owl-dot.active span,
+    .owl-dot:hover span
+      background-color white
+      &:hover
+        background-color white
+    .owl-dot span
+      background-color transparent
+      border 1px solid white
+      &:hover
+        background-color white
+  .owl-nav [class*='owl-']
+    background-color rgba(0,0,0,0.6)
+    font-size 28px
+    border-radius 30px
+    color white
+    opacity 0.5
+    &:hover
+      background-color black
+  .owl-nav
+    position absolute
+    top 50%
+    left 0
+    right 0
+    .owl-prev
+      left 35px
+      position absolute
+      padding 5px 20px
+    .owl-next
+      right 35px
+      position absolute
+      padding 5px 20px
 
 .slider-box
   padding-top 0 !important
