--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -12,7 +12,7 @@ body
 
 h1,h2,h3,h4,h5, h6
   margin 0
-  font-weight 700
+  font-weight 400
 
 strong
   font-weight 700
@@ -27,6 +27,9 @@ p, span
 input[type="reset"][disabled], input[type="submit"][disabled],
 html input[type="button"][disabled], button[disabled], .btn[disabled]
   cursor not-allowed
+
+.optional
+  color optional !important
 
 .no-padding
   padding 0 !important
@@ -84,6 +87,9 @@ md-input-container
       width 100%
 
   /* SECTION TWO */
+  .section-two
+    padding 30px 0 !important
+
 
   // silence is golg ..
 
