--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -10,6 +10,7 @@
 .shopping-cart
   position relative
   margin-top -5px
+  margin-left 30px
   i
     font-size 40px
     color shoppingCart
@@ -18,12 +19,47 @@
     color white
     text-align center
     border-radius 30px
-    background-color qtyCartClr
+    background-color optional
     font-size 13px
     top -20px
     left 15px
     width 20px
     height 20px
+
+.navbar-side-slider
+  .nav-item
+    &:nth-child(5) a
+      color optional
+.navbar-side-slider li a
+  color black
+  font-size 18px
+  &:nth-child(5)
+    color optional
+
+/* header three rows style */
+.one-rows-nav
+  .first-row
+    background-color white
+    md-input-container.md-default-theme .md-input, md-input-container .md-input,
+    md-input-container.md-default-theme>md-icon, md-input-container>md-icon
+      border-color black
+    .btn-link
+      color black
+  md-input-container
+    margin 6px 0 15px
+  md-input-container .md-errors-spacer
+    min-height 0
+  .nav-theme
+    background-color mainColor
+    .navbar-nav .nav-link
+      color white
+      font-size 18px
+  .nav
+    margin-top 10px
+    > li > .shopping-cart
+      padding-right 45px
+  .navbar-brand .logo
+    width 250px
 
 /* header three rows style */
 .three-rows-nav
