--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,64 +1,63 @@
 <div id="home">
-    <section class="slider-box">
-        <div class="owl-carousel owl-theme owl-theme-slider">
-            <div class="slider" ng-repeat="slide in Home.mainSlider" ng-repeat-owl-carousel
-                 carousel-init="Home.carouselInitializerSlider">
-                <div class="item" style="width: 100%;">
-                    <a post-link="{ link: {url: slide.link, target: '_self'} }">
-                        <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
-                    </a>
+    <section class="container slider-box slider-small">
+        <div class="row">
+            <div class="col-sm-9">
+                <div class="owl-carousel owl-theme owl-theme-slider">
+                    <div class="slider" ng-repeat="slide in Home.mainSlider" ng-repeat-owl-carousel
+                         carousel-init="Home.carouselInitializerSlider">
+                        <div class="item" style="width: 100%;">
+                            <a post-link="{ link: {url: slide.link, target: '_self'} }">
+                                <div class="slider-img" style="background-image:url('{{ slide.featuredImage.url }}');"></div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div class="col-sm-3">
+                <h4>Enlaces rápidos</h4>
+                <hr>
+                <ul class="nav flex-column navbar-side-slider">
+                    <li class="nav-item" ng-repeat="item in fastLink">
+                        <a class="nav-link" href="{{ item.link }}"> <i class="{{item.excerpt}}"></i> {{ item.title }}</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </section>
-    <section class="section-one">
-        <article class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    <h1>{{ Home.aboutUs.title }}</h1>
-                    <p>{{ Home.aboutUs.excerpt }}..</p>
-                    <a href="{{Home.aboutUs.link}}" target="_self">
-                        Más información
-                        <i class="fa fa-angle-right"></i>
-                    </a>
-                </div>
-                <div class="col-sm-3">
-                    <img class="rounded-circle" src="{{ Home.aboutUs.featuredImage.url }}" alt="Sydgroup">
-                </div>
-            </div>
-        </article>
     </section>
     <section class="section-two" ng-controller="ShoppingCtrl as Shop">
         <div class="container">
             <div class="title-primary">
-                <h1 class="text-uppercase">PRODUCTOS</h1>
+                <h1>Lo más vendido</h1>
             </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-4" ng-repeat="product in Home.products">
-                    <div class="box-simple" ng-controller="AccessCtrl as Access">
+
+            <div class="owl-carousel owl-theme owl-carousel">
+                <div class="box-simple" ng-repeat="product in Home.products" ng-repeat-owl-carousel
+                     carousel-init="Home.carouselInitializer">
+                    <div class="item">
                         <div class="box-header">
                             <a ui-sref="product-detail({slug:product.slug})" title="Ver más">
                                 <div class="box-bg-img"
                                      style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
                             </a>
                         </div>
-                        <div class="box-container">
-                            <p>{{ product.name }}</p>
-                            <h4 class="text-warning">{{ product.price | currency }}</h4>
-                        </div>
-                        <div class="box-footer">
-                            <a ui-sref="product-detail({slug:product.slug})" class="btn btn-outline-dark">Ver más</a>
-                            <button class="btn btn-danger"
-                                    ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
+                    </div>
+                    <div class="box-container">
+                        <p>{{ product.name }}</p>
+                        <h4 class="text-warning">{{ product.price | currency }}</h4>
+                    </div>
+                    <div class="box-footer">
+                        <a ui-sref="product-detail({slug:product.slug})" class="btn btn-outline-dark">Ver más</a>
+                        <button class="btn btn-danger"
+                                ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
                            name: product.name, price: product.price, qty: 1,taxonomies : product.taxonomies, shipmentPrice: product.shipmentPrice, typeTax: product.typeTax}, 1)"
-                                    ng-disabled="Shop.itemInCart(product)">Comprar
-                            </button>
-                        </div>
+                                ng-disabled="Shop.itemInCart(product)">Comprar
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <section class="section-three">
         <div class="container">
             <h1 class="text-uppercase">{{ Home.history.title }}</h1>
