--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -28,7 +28,7 @@ wShopCart = 100% //shopcart image size width
 /* font style */
 font-size = 16px
 fontClr = black
-
+fontTitles = 'Josefin Sans', sans-serif
 /* color sections */
 mainColor = black //color of nav
 footerTopClr = #ccc
