--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,3 +1,18 @@
+<div class="top-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-8">
+                <h3>¿Dudas? Nosotros las resolvemos, contáctanos.</h3>
+            </div>
+            <div class="col-sm-4">
+                <div class="list-icons-add" ng-repeat="social in socialMedia">
+                    <a class="nav-link" href="{{ social.excerpt }}"><i class="{{ social.title }}"></i> <span
+                            ng-bind-html="social.content | trustHtml"></span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div id="footer-top">
     <div class="container">
         <div class="row">
@@ -13,7 +28,15 @@
             </div>
             <div class="col-sm-4">
                 <div class="box-contact">
-                    <h3>Contáctanos</h3>
+                    <h3>Nuestras sucursales</h3>
+                    <div class="list-icons-add" ng-repeat="post in branchOffices">
+                        <a class="nav-link" href="{{ post.link }}"> {{ post.title }}</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="box-contact">
+                    <h3>Contáctanos en</h3>
                     <div class="list-icons-add" ng-repeat="post in contactData">
                         <a class="nav-link" href="{{ post.excerpt }}"><i class="{{ post
                     .title }}"></i> <span
@@ -21,20 +44,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="box-contact">
-                    <h3>Formas de pago</h3>
-                    <i><img src="img/paypal-1.png" alt="Paypal"></i>
-                    <i><img src="img/master-card.png" alt="Master card"></i>
-                    <i><img src="img/american.png" alt="American express"></i>
-                    <i><img src="img/visa.png" alt="Visa"></i>
-                </div>
-            </div>
         </div>
     </div>
 </div>
 <div class="text-center bottom-footer">
-    <p class="white">© 2018 Sydgroup , Todos los Derechos Reservados.</p>
+    <p class="white">© 2018 Hanny Pulido, Todos los Derechos Reservados.</p>
 </div>
 
     
